--- a/dotnet/src/Client/Client.csproj
+++ b/dotnet/src/Client/Client.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Grpc.Net.Client" Version="2.25.0" />
+  </ItemGroup>
+
 </Project>
