--- a/dotnet/src/Server/Server.csproj
+++ b/dotnet/src/Server/Server.csproj
@@ -1,17 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
+    <Protobuf Include="../../../golang/echo/proto/echo.proto" GrpcServices="Server" Link="Protos/echo.proto" />
     <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.25.0" />
   </ItemGroup>
-
   <ItemGroup>
     <Content Update="Properties\launchSettings.json">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
