--- a/dotnet/src/Client/Client.csproj
+++ b/dotnet/src/Client/Client.csproj
@@ -14,4 +14,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Server\Server.csproj" />
+  </ItemGroup>
+
 </Project>
